Bug fixes with overflow mobile, attempt 1, bug fix with About nav marker

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ color5: #271b2f;  Dark Shade - Text Color, inverted-color background
 
 body {
     background-color: #F2F8ED;
+    overflow-x: hidden;
 }
 
 nav {
@@ -93,9 +94,9 @@ nav {
         padding-right: 100px;
         padding-bottom: 25px;
     }
-    body {
+    /*body {
         overflow-x: hidden;
-    }
+    }*/
     .nav-links {
         position: absolute;
         right: 0px;
