--- a/styleAbout.css
+++ b/styleAbout.css
@@ -14,6 +14,7 @@
 
 body {
     background-color: #F2F8ED;
+    overflow-x: hidden;
 }
 
 nav {
@@ -89,9 +90,10 @@ nav {
         padding-right: 100px;
         padding-bottom: 25px;
     }
+    /*
     body {
         overflow-x: hidden;
-    }
+    }*/
     .nav-links {
         position: absolute;
         right: 0px;
@@ -160,7 +162,7 @@ nav {
     }
     #about-nav-pointer-container {
         padding-top: 0px;
-        margin-left: 30px;
+        margin-left: 16px;
         width: 40px;
     }
     .triangle { /*Mother and Child Objects*/
