--- a/styleMusic.css
+++ b/styleMusic.css
@@ -14,6 +14,7 @@
 
 body {
     background-color: #F2F8ED;
+    overflow-x: hidden;
 }
 
 nav {
@@ -89,9 +90,11 @@ nav {
         padding-right: 100px;
         padding-bottom: 25px;
     }
+    /*
     body {
         overflow-x: hidden;
     }
+    */
     .nav-links {
         position: absolute;
         right: 0px;
