--- a/styleProjects.css
+++ b/styleProjects.css
@@ -14,6 +14,7 @@
 
 body {
     background-color: #F2F8ED;
+    overflow-x: hidden;
 }
 
 nav {
@@ -159,9 +160,10 @@ nav {
 
 /*SCREEN-SIZE DIFFERENCES*/
 @media screen and (max-width: 768px) {              /*MOBILE*/
+    /*
     body {
         overflow-x: hidden;
-    }
+    }*/
     .nav-links {
         position: absolute;
         right: 0px;
